# Agrocylo-PIP

./: PULL_REQUEST.md  README.md
.github/workflows/: client-lint.yml  contracts.yml  server.yml
client/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
client/src/: App.css  App.test.ts  App.tsx  index.css  main.tsx  vite-env.d.ts
client/src/__tests__/: campaignService.test.ts  investorService.test.ts
client/src/components/: AppLayout.tsx  Header.tsx
client/src/context/: WalletContext.tsx
client/src/hooks/: useCampaignAnalytics.ts
client/src/lib/: campaignStatus.ts  format.ts  queryClient.ts
client/src/pages/: AnalyticsDashboardPage.tsx  CampaignDetailPage.tsx  CreateCampaignPage.tsx  DesignFoundationsPage.tsx  InvestorDashboardPage.tsx  index.tsx
contracts/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  README.md  SETUP.md  VERIFICATION_GUIDE.md
contracts/integration_tests/: Cargo.toml  README.md
contracts/integration_tests/src/: lib.rs
contracts/integration_tests/tests/: campaign_lifecycle.rs
contracts/production_escrow/: Cargo.toml  README.md
contracts/production_escrow/src/: events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: activity.rs  admin.rs  campaign.rs  events.rs  farmer.rs  lib.rs  (+3 more)
server/: .env.example  .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
server/prisma/: schema.prisma
server/src/: app.module.ts  main.ts
server/test/: app.e2e-spec.ts
(+94 files in other folders)
